k8s/namespace-and-storage.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: speech-io
